assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');

 @import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300&family=Young+Serif&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/* make title bigger and make full body darker colour */
body {
    font-family: 'Roboto', sans-serif;
    text-shadow: black 0.1em 0.2em 0.2em;
    background-color: #aeaeae;
    color: #fff;
    padding: 2rem;
    text-align: center;
    /* overflow: hidden; */
    width: 100vw;
    height: 100vh;
}

.sparkle {
    position: absolute;
    width: 12px;
    height: 8px;
    background-color: #ffffff33; 
    border-radius: 100%;
    pointer-events: none;
    transition: transform 0.1s ease-out, opacity 0.8s ease-out;
}

.add-btn{
    position: fixed;
    top: 20px;
    right: 20px;
    border-radius: 100%;
    background-color: rgb(7, 139, 7);
    padding: 10px;
    box-shadow: -1px -1px 0px rgba(255, 255, 255, 0.3), 1px 1px 0px rgba(0, 0, 0, 0.8);


}

/* style the button */
button {
    background-color: rgb(4, 72, 4);
    color: #fff;
    padding: .6rem;
    border: none;
    border-radius: 30px;
    /* add emboss effect to text */
    text-shadow: 0.1em 0.1em 0.1em #000;
    opacity: .9;
    font-size: 1rem;
    margin: .2rem;
    cursor: pointer;
    transition: all 0.3s ease-in-out;
    box-shadow: -1px -1px 0px rgba(255, 255, 255, 0.3), 1px 1px 0px rgba(0, 0, 0, 0.8);

}

button:hover {
    opacity: 1;
    transform: scale(1.1);
}

button:active {
    transform: scale(0.9);
}

.buttonContainer{
    display: flex;
    justify-content: space-around;
    align-items: center;
    /* margin: 20px; */
    /* padding: 20px; */
    flex-wrap: wrap;
    width: 100%;
    /* background-color: red; */
}

.btn{
    margin: 2px 10px;
    font-size: 20px;
    text-shadow: none;
}

.btn:hover{
    transform: scale(1.1);
    transition: all 0.4s ease-in-out;
    cursor: pointer;
text-shadow: #4848483b 0.05rem 0.5rem 0.3rem ;
}

.delete-btn{
    color: rgb(240, 57, 57);
}

.edit-btn{
    color: rgb(5, 121, 18);
    /* background-color: red; */
}

header{
    /* padding: 20px; */
    display: flex;
}

h1 {
    font-size: 3rem;
    color: #d6d6d6;
    text-align: center;
    background-color: #89878741;
    font-family: Rowdies;
    display: inline-block;
    /* add pulsing animation */
    /* animation: pulse 1s infinite; */
    border-radius: 12px;
    padding: 20px;
    margin: auto;
}

/* add pulsing animation */
@keyframes pulse {
    0% {
        transform: scale(1);
        opacity: 50%;
        border-radius: 10px;
        padding: 10px;
    }

    50% {
        transform: scale(1.1);
        opacity: 100%;
        border-radius: 30px;
        padding: 12px;
    }

    100% {
        transform: scale(1);
        opacity: 50%;
        border-radius: 10px;
        padding: 10px;
    }
}

.hero {
    font-family: Rowdies;

    display: inline-block;
    border-radius: 20px;
    color: #e3e3e3;
    padding-bottom: 1rem;
    text-align: center;
}

/* make hero title bigger */
.hero h1 {
    font-size: 3rem;
}

/* add animations to the cards on hover and entrance */
.card {
    /* width: 400px; */
    height: 200px;
    background: grey;
    color: #e6e5e5;
    padding: .5rem;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    margin: 1rem;
    transition: all 0.3s ease-in-out;
    opacity: 0.8;
    border-radius: 30px;
    border: solid 2px #c9c9c973;
    box-shadow: -1px -1px 0px rgba(255, 255, 255, 0.3), 1px 1px 0px rgba(0, 0, 0, 0.8);
}

.card:hover {
    transform: scale(1) ;
    opacity: 1;
    border-radius: 5px;
    text-shadow: none;
}

/* make the card change background colour and font colour on click and keep it that way till clicked off */
.card:active {
    background: linear-gradient(#484848 0%, #a18fb8 100%);
    color: #b9b9b9;
    transition: all 1s ease-in-out;
}

.card:nth-child(2n):active {
    background: linear-gradient(#484848 0%, #b88f8f 100%);
}

/* make every third card a differnet gradient colour */
.card:nth-child(2n) {
    background: darkgrey;
}

img{
    max-width: 200px;
    max-height: 100px;
    border: 2px solid #c9c9c973;
    object-fit: cover;
    border-radius: 30px;
    transition: all 0.4s ease-in-out;


}

img:hover{
    /* transform: scale(1.1); */
    transition: all 0.4s ease-in-out;
    cursor: pointer;
    box-shadow: -1px -1px 0px rgba(255, 255, 255, 0.3), 1px 1px 0px rgba(0, 0, 0, 0.8);
}

 .img-active{
    transform: scale(3);
    transition: all 0.4s ease-in-out;
    cursor: pointer;
    border: 1px solid #d6000073;
    border-radius: 0px;
    box-shadow: none;
    /* bring to the top */
    z-index: 1;
}

.grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-content: center;
    align-items: center;
    align-items: center;
    flex-wrap: wrap;
    width: 90%;
    margin: 0 auto;
}


/* create animation to spin element 2 times*/
@keyframes spin {
    0% {
        transform: rotate(0deg);
        scale: .8;

    }

    50% {
        transform: rotate(180deg);
        scale: .4;
    }

    100% {
        transform: rotate(360deg);
        scale: .8;
     
    }
}


/* make responsive */
@media (max-width: 768px) {
    .grid {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width: 500px) {
    .grid {
        grid-template-columns: repeat(1, 1fr);
    }
}

